--- a/A1/commingSoon.html
+++ b/A1/commingSoon.html
@@ -57,42 +57,11 @@ folder and submit here for proper record keeping.
             <li><a href="./commingSoon.html">Contact</a></li>
         </ul>
     </nav>
-    <div class="content">
-        <header class="centered">
-            <h1>
-                Christian Thibodeau
-            </h1>
-            <h2>
-                Software developer.
-            </h2>
-        </header>
-        <main class="centered">
-
-            <img src="./programmer.webp" alt="A picture of Chris" id="profilePicture">
-            <section>
-                Known coding languages and skills:
-                <ul class="fancyText">
-                    <li>HTML</li>
-                    <li>CSS</li>
-                    <li>Java</li>
-                    <li>C/C++</li>
-                    <li>Python</li>
-                    <li>Assembly</li>
-                    <li>Dos</li>
-                    <li>LaTeX</li>
-                    <li>Arduino</li>
-                </ul>
-            </section>
-        </main>
-        <footer class="centered">
-            <p></p>
-            <label>Find me on</label>
-            <a href="https://github.com/Chris-J-Thib" target="_blank">
-                <img src="./GitHub-logo.png" alt="GitHub Profile Link">
-            </a>
-            <p></p>
-        </footer>
-    </div>
+    <main class="content fancyText">
+        <p></p>
+        Comming Soon!
+        <p></p>
+    </main>
 </body>
 
 </html>
