--- a/A2/index.html
+++ b/A2/index.html
@@ -2,91 +2,54 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sample Design</title>
+    <title>Prolog</title>
+    <meta content="width=device-width, initial-scale=1" name="viewport" />
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/f76aadd2a6.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <Header>
-        <div>
-            <div>
-                <div>
-                    <img src="./svg/Logo.svg" alt="Sample Design Logo">
-                </div>
-                <nav>
-                    <ul>
-                        <li>Home</li>
-                        <li>Products</li>
-                        <li>Documentation</li>
-                        <li>Pricing</li>
-                    </ul>
-                </nav>
-                <div>
-                    <button>Open Dashboard</button>
-                </div>
-            </div>
-        </div>
+        <img src="./svg/Logo.svg" alt="Prolog Logo">
+        <nav>
+            <i class="fa-solid fa-bars"></i>
+            <ul id="drop">
+                <li>Home</li>
+                <li>Products</li>
+                <li>Documentation</li>
+                <li>Pricing</li>
+            </ul>
+            <button id="dash">Open Dashboard</button>
+        </nav>
     </Header>
     <main>
-        <div>
-            <div>
-                <div>
-                    <div>
-                        <h1>
-                            Your Issues In Sight. At All Times.
-                        </h1>
-                        <h2>
-                            Powerful error tracking and monitoring for software applications. Trusted by over 4,000
-                            startups.
-                        </h2>
-                    </div>
-                </div>
-            </div>
-            <div>
-                <div>
-                    <img src="./svg/Macbook Pro 16 mockup.svg" alt="Macbook Pro Running Sample Design">
-                </div>
-            </div>
-        </div>
+        <h1>
+            Your Issues In Sight. At All Times.
+        </h1>
+        <h2>
+            Powerful error tracking and monitoring for software applications. Trusted by over 4,000
+            startups.
+        </h2>
+        <img src="./svg/Macbook Pro 16 mockup.svg" alt="Macbook Pro Running Prolog">
     </main>
     <footer>
-        <div>
+        <p>
             Join 4,000+ companies using Prolog
-            <div>
-                <div>
-                    <img src="./svg/layers-icon.svg" alt="layers">
-                    <img src="./svg/layers.svg" alt="layers">
-                </div>
-                <div>
-                    <img src="./svg/sisyphus-icon.svg" alt="sisyphus">
-                    <img src="./svg/sisyphus.svg" alt="sisyphus">
-                </div>
-                <div>
-                    <img src="./svg/circooles-icon.svg" alt="circooles">
-                    <img src="./svg/circooles.svg" alt="circooles">
-                </div>
-                <div>
-                    <img src="./svg/catalog-icon.svg" alt="catalog">
-                    <img src="./svg/catalog.svg" alt="catalog">
-                </div>
-                <div>
-                    <img src="./svg/quotient-icon.svg" alt="quotient">
-                    <img src="./svg/quotient.svg" alt="quotient">
-                </div>
-            </div>
-        </div>
+        </p>
+        <ul>
+            <li><img src="./svg/layers-complete.svg" alt="company-layers"></li>
+            <li><img src="./svg/sisyphus-complete.svg" alt="company-sisyphus"></li>
+            <li><img src="./svg/circooles-complete.svg" alt="company-circooles"></li>
+            <li><img src="./svg/catalog-complete.svg" alt="company-catalog"></li>
+            <li><img src="./svg/quotient-complete.svg" alt="company-quotient"></li>
+        </ul>
     </footer>
-    <div>
-        <button>
-            <img src="./svg/chat.svg" alt="Chat with a represetitive">
-        </button>
-    </div>
+    <button id="chat">
+        <img src="./svg/chat.svg" alt="Chat with a represetitive">
+    </button>
 </body>
 
 </html>
